@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-21T01:46:38Z",
-  "count_outdated" : 345,
-  "uniques_outdated" : 210,
+  "timestamp" : "2022-10-21T16:34:04Z",
+  "count_outdated" : 347,
+  "uniques_outdated" : 211,
   "count" : 353,
   "uniques" : 216,
   "clones" : [
-    {
-      "timestamp": "2022-10-07T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-09T00:00:00Z",
       "count": 1,
