@@ -1,12 +1,7 @@
 {
-  "count": 8,
-  "uniques": 6,
+  "count": 6,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2022-10-07T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-10-09T00:00:00Z",
       "count": 1,
